sumo/tests/netgen/function/junction_types/errors/junction_type_actuated_tls/random/errors.netgen
Error: Only the following junction types are known: traffic_light, traffic_light_unregulated, priority, priority_stop, allway_stop, unregulated, right_before_left
Quitting (on error).
